--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <header class="header">
         <div class="container header-box">
             <ul class="header-nav">
-                <li class="header-item"><a class="header-link" href="">Про нас</a></li>
-                <li class="header-item"><a class="header-link" href="">Напрямки роботи</a></li>
-                <li class="header-item"><a class="header-link" href="">Навчання</a></li>
-                <li class="header-item"><a class="header-link" href="">Наші подорожі</a></li>
-                <li class="header-item"><a class="header-link" href="">Наша команда</a></li>
-                <li class="header-item"><a class="header-link" href="">Відгуки</a></li>
+                <li class="header-item"><a class="header-link" href="#nas">Про нас</a></li>
+                <li class="header-item"><a class="header-link" href="#work">Напрямки роботи</a></li>
+                <li class="header-item"><a class="header-link" href="#mova">Навчання</a></li>
+                <li class="header-item"><a class="header-link" href="#trel">Наші подорожі</a></li>
+                <li class="header-item"><a class="header-link" href="#team">Наша команда</a></li>
+                <li class="header-item"><a class="header-link" href="#comment">Відгуки</a></li>
             </ul>
             <ul class="header-nav">
                 <li class="header-items"><img class="header-img" src="./imges/tel.png" alt="Телефон"></li>
@@ -30,25 +30,27 @@
         <section class="hero">
             <div class="container">
                 <ul class="hero-list">
-                    <li class="hero-item">
-                        <h1 class="hero-text">Giraffe Club</h1>
-                    </li>
-                    <li class="hero-item">
-                        <p class="hero-p">Офіційний сертифікований центр підготовки до міжнародних екзаменів Cambrige
-                        </p>
-                    </li>
-                    <li class="hero-item">
-                        <button class="hero-btn" type="button">Отримати консультацію</button>
-                    </li>
+                    <ul class="hero-box">
+                        <li class="hero-item">
+                            <h1 class="hero-text">Giraffe Club</h1>
+                        </li>
+                        <li class="hero-item">
+                            <p class="hero-p">Офіційний сертифікований центр підготовки до міжнародних екзаменів Cambrige
+                            </p>
+                        </li>
+                        <li class="hero-item">
+                            <button class="hero-btn" type="button">Отримати консультацію</button>
+                        </li>
+                    </ul>
                     <ul class="hero-lists">
                         <li class="hero-items">
-                            <img src="./imges/giraffe.png" alt="Жираж">
+                            <img class="hero-img" src="./imges/giraffe.png" alt="Жираж">
                         </li>
                     </ul>
                 </ul>
             </div>
         </section>
-        <section class="nas">
+        <section id="nas" class="nas">
             <div class="container">
                 <p class="nas-p">Про нас</p>
                 <h2 class="nas-text">Мовних шкіл багато - лідер один!</h2>
@@ -80,7 +82,7 @@
                 </ul>
             </div>
         </section>
-        <section class="work">
+        <section id="work" class="work">
             <div class="container">
                 <p class="work-p">Напрямки роботи</p>
                 <h2 class="work-text">Що ти можеш у нас знайти?</h2>
@@ -121,7 +123,7 @@
                 <button type="button">Залишити заявку</button>
             </div>
         </section>
-        <section class="mova">
+        <section id="mova" class="mova">
             <div class="container">
                 <p class="mova-p">Навчання</p>
                 <h2 class="mova-text">Вивчення іноземної мови</h2>
@@ -166,7 +168,7 @@
                 </ul>
             </div>
         </section>
-        <section class="trel">
+        <section id="trel" class="trel">
             <div class="container">
                 <p class="trel-p">Наші подорожі</p>
                 <h2 class="trel-text">Ми подорожуємо світом</h2>
@@ -192,7 +194,7 @@
                 </ul>
             </div>
         </section>
-        <section class="team">
+        <section id="team" class="team">
             <div class="container">
                 <p class="team-p">Наша команда</p>
                 <h2 class="team-text">Найкраща команда - найкращі результати</h2>
@@ -227,7 +229,7 @@
                 <img class="team-img" src="./imges/right.png" alt="">
             </div>
         </section>
-        <section class="comment">
+        <section id="comment" class="comment">
             <div class="container">
                 <p class="comment-p">Відгуки</p>
                 <h2 class="comment-text">Що кажуть про нас</h2>
