--- a/index.html
+++ b/index.html
@@ -57,27 +57,27 @@
                 <ul class="nas-list">
                     <li class="nas-item">
                         <img class="nas-img" src="./imges/calendar.png" alt="Календар">
-                        <p class="nas-texts">6 років успішної роботи</p>
+                        <p class="nas-texts">6 років успішної <br> роботи</p>
                     </li>
                     <li class="nas-item">
                         <img class="nas-img" src="./imges/book.png" alt="Книжка">
-                        <p class="nas-texts">Сучасні програми й навчальні матеріали</p>
+                        <p class="nas-texts">Сучасні програми й <br> навчальні матеріали</p>
                     </li>
                     <li class="nas-item">
                         <img class="nas-img" src="./imges/teacher.png" alt="Вчителька">
-                        <p class="nas-texts">Професійні викладачи</p>
+                        <p class="nas-texts">Професійні <br> викладачи</p>
                     </li>
                     <li class="nas-item">
                         <img class="nas-img" src="./imges/cup.png" alt="Кубок">
-                        <p class="nas-texts">Переможець «Народний Бренд» (2018, 2019, 2020) </p>
+                        <p class="nas-texts">Переможець <br> «Народний Бренд» <br> (2018, 2019, 2020) </p>
                     </li>
                     <li class="nas-item">
                         <img class="nas-img" src="./imges/hand.png" alt="Партнери">
-                        <p class="nas-texts">Топ партнер Cambridge Assessment English</p>
+                        <p class="nas-texts">Топ партнер <br> Cambridge <br> Assessment English</p>
                     </li>
                     <li class="nas-item">
                         <img class="nas-img" src="./imges/student.png" alt="Випускник">
-                        <p class="nas-texts">Сотні наших випускників з високим рівнем </p>
+                        <p class="nas-texts">Сотні наших <br> випускників з <br> високим рівнем </p>
                     </li>
                 </ul>
             </div>
