--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                             <h1 class="hero-text">Giraffe Club</h1>
                         </li>
                         <li class="hero-item">
-                            <p class="hero-p">Офіційний сертифікований центр підготовки до міжнародних екзаменів Cambrige
+                            <p class="hero-p">Офіційний сертифікований центр підготовки до міжнародних екзаменів
+                                Cambrige
                             </p>
                         </li>
                         <li class="hero-item">
@@ -86,41 +87,61 @@
             <div class="container">
                 <p class="work-p">Напрямки роботи</p>
                 <h2 class="work-text">Що ти можеш у нас знайти?</h2>
-                <ul class="work-list">
-                    <li class="work-item">
-                        <img class="work-img" src="./imges/one.png" alt="Один">
-                        <p class="work-texts">Англійська для дітей від 1 року</p>
-                    </li>
-                    <li class="work-item">
-                        <img class="work-img" src="./imges/two.png" alt="Два">
-                        <p class="work-texts">Англійська для дорослих</p>
-                    </li>
-                    <li class="work-item">
-                        <img class="work-img" src="./imges/three.png" alt="Три">
-                        <p class="work-texts">Americanschool для школярів (1- 11 клас)</p>
-                    </li>
-                    <li class="work-item">
-                        <img class="work-img" src="./imges/four.png" alt="Чотири">
-                        <p class="work-texts">Підготовка до ЗНО</p>
-                    </li>
-                    <li class="work-item">
-                        <img class="work-img" src="./imges/five.png" alt="П'ять">
-                        <p class="work-texts">Підготовка до міжнародних екзаменів YLE, KET, PET, FCE, IELTS</p>
-                    </li>
-                    <li class="work-item">
-                        <img class="work-img" src="./imges/six.png" alt="Шість">
-                        <p class="work-texts">Німецька для дорослих та дітей, віком від 3 років</p>
-                    </li>
-                    <li class="work-item">
-                        <img class="work-img" src="./imges/seven.png" alt="Сім">
-                        <p class="work-texts">Підготовка дітей до школи</p>
-                    </li>
-                    <li class="work-item">
-                        <img class="work-img" src="./imges/eight.png" alt="Вісім">
-                        <p class="work-texts">Літній табір</p>
-                    </li>
-                </ul>
-                <button type="button">Залишити заявку</button>
+                <div class="work-box">
+                    <img class="work-imges" src="./imges/giraffe.png" alt="">
+                    <ul class="work-list">
+                        <li class="work-item">
+                            <a class="work-link" href="">
+                                <p class="work-num">01</p>
+                            </a>
+                            <p class="work-texts">Англійська для дітей від 1 року</p>
+                        </li>
+                        <li class="work-item">
+                            <a class="work-link" href="">
+                                <p class="work-num">02</p>
+                            </a>
+                            <p class="work-texts">Англійська для дорослих</p>
+                        </li>
+                        <li class="work-item">
+                            <a class="work-link" href="">
+                                <p class="work-num">03</p>
+                            </a>
+                            <p class="work-texts">Americanschool для школярів (1- 11 клас)</p>
+                        </li>
+                        <li class="work-item">
+                            <a class="work-link" href="">
+                                <p class="work-num">04</p>
+                            </a>
+                            <p class="work-texts">Підготовка до ЗНО</p>
+                        </li>
+                        <li class="work-item">
+                            <a class="work-link" href="">
+                                <p class="work-num">05</p>
+                            </a>
+                            <p class="work-texts">Підготовка до міжнародних екзаменів <br> YLE, KET, PET, FCE, IELTS</p>
+                        </li>
+                        <li class="work-item">
+                            <a class="work-link" href="">
+                                <p class="work-num">06</p>
+                            </a>
+                            <p class="work-texts">Німецька для дорослих та дітей, віком <br> від 3 років</p>
+                        </li>
+                        <li class="work-item">
+                            <a class="work-link" href="">
+                                <p class="work-num">07</p>
+                            </a>
+                            <p class="work-texts">Підготовка дітей до школи</p>
+                        </li>
+                        <li class="work-item">
+                            <a class="work-link" href="">
+                                <p class="work-num">08</p>
+                            </a>
+                            <p class="work-texts">Літній табір</p>
+                        </li>
+                    </ul>
+                    <img class="work-imges" src="./imges/giraffe.png" alt="">
+                </div>
+                <button class="work-btn" type="button">Залишити заявку</button>
             </div>
         </section>
         <section id="mova" class="mova">
@@ -130,15 +151,21 @@
                 <div class="mova-box">
                     <ul class="mova-list">
                         <li class="mova-item">
-                            <img class="mova-img" src="./imges/one.png" alt="">
+                            <a class="mova-link" href="">
+                                <p class="mova-num">01</p>
+                            </a>
                             <p class="mova-texts">У групах</p>
                         </li>
                         <li class="mova-item">
-                            <img class="mova-img" src="./imges/two.png" alt="">
+                            <a class="mova-link" href="">
+                                <p class="mova-num">02</p>
+                            </a>
                             <p class="mova-texts">У міні-групах</p>
                         </li>
                         <li class="mova-item">
-                            <img class="mova-img" src="./imges/three.png" alt="">
+                            <a class="mova-link" href="">
+                                <p class="mova-num">03</p>
+                            </a>
                             <p class="mova-texts">Індивідуально</p>
                         </li>
                     </ul>
