--- a/index.html
+++ b/index.html
@@ -147,52 +147,69 @@
         <section id="mova" class="mova">
             <div class="container">
                 <p class="mova-p">Навчання</p>
-                <h2 class="mova-text">Вивчення іноземної мови</h2>
-                <div class="mova-box">
-                    <ul class="mova-list">
-                        <li class="mova-item">
-                            <a class="mova-link" href="">
-                                <p class="mova-num">01</p>
-                            </a>
-                            <p class="mova-texts">У групах</p>
-                        </li>
-                        <li class="mova-item">
-                            <a class="mova-link" href="">
-                                <p class="mova-num">02</p>
-                            </a>
-                            <p class="mova-texts">У міні-групах</p>
-                        </li>
-                        <li class="mova-item">
-                            <a class="mova-link" href="">
-                                <p class="mova-num">03</p>
-                            </a>
-                            <p class="mova-texts">Індивідуально</p>
-                        </li>
-                    </ul>
-                    <img class="mova-imges" src="./imges/boy.png" alt="">
-                </div>
-                <h2 class="curs">Формати курсів:</h2>
-                <ul class="curs-list">
-                    <li class="curs-item">
-                        <img class="curs-img" src="./imges/one.png" alt="">
-                        <h4 class="curs-text">Стандартний</h4>
-                        <p class="curs-p">Заняття 2 рази на тиждень тривалістю від 30 до 60 хв. (в залежності від віку).
-                        </p>
+                <ul class="mova-box">
+                    <li class="mova-bxs">
+                        <ul class="mova-list">
+                            <li class="mova-bx">
+                                <h2 class="mova-text">Вивчення іноземної мови</h2>
+                            </li>
+                            <li class="mova-item">
+                                <a class="mova-link" href="">
+                                    <p class="mova-num">01</p>
+                                </a>
+                                <p class="mova-texts">У групах</p>
+                            </li>
+                            <li class="mova-item">
+                                <a class="mova-link" href="">
+                                    <p class="mova-num">02</p>
+                                </a>
+                                <p class="mova-texts">У міні-групах</p>
+                            </li>
+                            <li class="mova-item">
+                                <a class="mova-link" href="">
+                                    <p class="mova-num">03</p>
+                                </a>
+                                <p class="mova-texts">Індивідуально</p>
+                            </li>
+                        </ul>
                     </li>
-                    <li class="curs-item">
-                        <img class="curs-img" src="./imges/two.png" alt="">
-                        <h4 class="curs-text">Поглиблений</h4>
-                        <p class="curs-p">Заняття 3 рази на тиждень по 1 год. 20 хв. З Кембриджським іспитом на новий
-                            рівень
-                            в кінці
-                            навчального року.</p>
-                    </li>
-                    <li class="curs-item">
-                        <img class="curs-img" src="./imges/three.png" alt="">
-                        <h4 class="curs-text">Онлайн-курси</h4>
-                        <p class="curs-p">Можна обрати як стандартний, так і поглиблений формат та вивчати онлайн</p>
+                    <li class="mova-bx">
+                        <img class="mova-imges" src="./imges/boy.png" alt="">
                     </li>
                 </ul>
+                <h2 class="curs-title">Формати курсів:</h2>
+                <ul class="curs-list">
+                    <li class="curs-item">
+                        <div class="curs-header">
+                            <a class="curs-link" href="#">
+                                <p class="curs-num">01</p>
+                            </a>
+                            <p class="curs-text">Стандартний</p>
+                        </div>
+                        <p class="curs-p">Заняття 2 рази на тиждень, тривалістю від 30 до 60 хв залежно від віку.</p>
+                    </li>
+                    <li class="curs-item">
+                        <div class="curs-header">
+                            <a class="curs-link" href="#">
+                                <p class="curs-num">02</p>
+                            </a>
+                            <p class="curs-text">Поглиблений</p>
+                        </div>
+                        <p class="curs-p">Заняття 3 рази на тиждень по 1 год 20 хв. З Кембриджським іспитом на новий
+                            рівень
+                            в кінці навчального року.</p>
+                    </li>
+                    <li class="curs-item">
+                        <div class="curs-header">
+                            <a class="curs-link" href="#">
+                                <p class="curs-num">03</p>
+                            </a>
+                            <p class="curs-text">Онлайн-курси</p>
+                        </div>
+                        <p class="curs-p">Можна обрати як стандартний, так і поглиблений формат та вивчати онлайн.</p>
+                    </li>
+                </ul>
+
             </div>
         </section>
         <section id="trel" class="trel">
